--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,4 @@
-/*#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}*/
 
 header {
   text-align: center;
@@ -61,12 +20,14 @@ header {
   grid-template-columns: 2fr 4fr;
   margin-left: 60px;
   margin-right: 60px;
+  padding-top: 20px;
 }
 
 h3 {
   margin-left: 60px;
   margin-right: 60px;
   background-color: #F5F5F5;
+  text-align: center;
 }
 
 .workContainer {
@@ -75,7 +36,7 @@ h3 {
   grid-template-columns: 2fr 4fr;
   margin-left: 60px;
   margin-right: 60px;
- 
+  padding-top: 20px;
 }
 
 p {
@@ -84,10 +45,10 @@ p {
 
 .work {
   padding-top: 50px;
-  text-align: center;
+ 
 }
 
 .ed {
   padding-top: 50px;
-  text-align: center;
+  
 }
