--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,34 @@ label {
   text-align: center;
 }
 
-.schoolTitle {
+.title {
   font-weight: bold;
 }
 
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.workContainer
+{
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+ text-align: center;
+ 
+}
+
+textarea {
+  background-color: #F5F5F5;
+  border: none;
+  width: 100%;
+  height: 80px;
+  border-radius: 5px;
+}
+
+.workListContainer {
+  padding-top: 20px;
+  text-align: center;
+}
