--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,14 @@ textarea {
   padding-top: 20px;
   text-align: center;
 }
+
+.resume {
+  box-shadow: 0 0 10px #d8dae6;
+  text-align: center;
+  padding-right: 5px;
+  width: 90%;
+}
+
+.printButton {
+  padding-top: 10px;
+}
