--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,14 @@ header {
   padding-left: 10px;
   padding-right: 10px;
  padding-top: 5px;
+ 
 }
 
 .container {
   display: flex;
   justify-content: space-evenly;
+  gap: 5px;
+ 
 }
 
 .locImg {
@@ -140,6 +143,10 @@ textarea {
   text-align: center;
   padding-right: 5px;
   width: 90%;
+}
+
+.resumeContainer {
+  padding-top: 30px;
 }
 
 .printButton {
