--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/*
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -39,7 +41,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6em 1why window print centers my document.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -67,3 +69,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
