--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ h3 {
   margin-right: 60px;
   background-color: #F5F5F5;
   text-align: center;
+  font-size: 23px;
 }
 
 .workResume {
@@ -185,16 +186,7 @@ textarea {
 .edit {
   background-color: #d8dae6;
 }
-/*
-input[type=submit] {
-  padding:10px 15px; 
-  background-color: #d8dae6; 
-  border:0 none;
-  cursor:pointer;
-  -webkit-border-radius: 5px;
-  border-radius: 5px; 
-  transition: border-color 0.25s;
-}*/
+
 input[type=submit] {
   border-radius: 8px;
   border: 1px solid transparent;
