--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,21 @@ header {
   display: flex;
   justify-content: space-evenly;
   gap: 5px;
- 
+  flex-wrap: nowrap;
+
+}
+.basicCont {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 .locImg {
+  width: 25px;
+  height: 25px;
+}
+
+.phoneImg {
   width: 25px;
 }
 
@@ -104,6 +115,7 @@ input {
 
 h2 {
   text-align: center;
+  font-size: 20px;
 }
 label {
   font-weight: bold;
