--- a/src/App.css
+++ b/src/App.css
@@ -172,8 +172,9 @@ textarea {
 .resume {
   box-shadow: 0 0 10px #d8dae6;
   text-align: center;
-  padding-right: 5px;
+  margin-right: 5px;
   width: 90%;
+  margin-left: 5px;
 }
 
 .resumeContainer {
