--- a/src/App.css
+++ b/src/App.css
@@ -183,7 +183,7 @@ textarea {
 
 .printButton {
   padding-top: 10px;
-  
+  padding-left: 5px;
 }
 
 .printBack {
@@ -205,7 +205,7 @@ input[type=submit] {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
- 
+  background-color: #d8dae6;
   cursor: pointer;
   transition: border-color 0.25s;
 }
