--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,18 @@
   -webkit-text-size-adjust: 100%;
 }
 
-@page{size:auto; margin:5mm;}
+@page {
+  size: auto;
+  margin: 5mm;
+}
 
 header {
   text-align: center;
   background-color: #F5F5F5;
   padding-left: 10px;
   padding-right: 10px;
- padding-top: 5px;
- 
+  padding-top: 5px;
+
 }
 
 .container {
@@ -28,11 +31,12 @@ header {
   flex-wrap: wrap;
 
 }
+
 .basicCont {
   display: flex;
   gap: 10px;
   align-items: center;
-  
+
 }
 
 .locImg {
@@ -45,7 +49,7 @@ header {
 }
 
 .schoolResume {
- 
+
   display: grid;
   grid-template-columns: 2fr 4fr;
   margin-left: 60px;
@@ -64,7 +68,7 @@ h3 {
 }
 
 .workResume {
- 
+
   display: grid;
   grid-template-columns: 2fr 4fr;
   margin-left: 60px;
@@ -81,12 +85,12 @@ p {
 .work {
   padding-top: 50px;
   padding-bottom: 30px;
- 
+
 }
 
 .ed {
   padding-top: 50px;
-  
+
 }
 
 .appContainer {
@@ -96,13 +100,12 @@ p {
 
 }
 
-.basicContainer
-{
- display: flex;
- flex-wrap: wrap;
- justify-content: center;
- 
- gap: 20px;
+.basicContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  gap: 20px;
 }
 
 input {
@@ -111,24 +114,24 @@ input {
   border-radius: 5px;
   border: none;
   font-size: 17px;
-  
+
 }
 
 h2 {
   text-align: center;
   font-size: 20px;
 }
+
 label {
   font-weight: bold;
 }
 
-.educationContainer
-{
- display: flex;
- flex-wrap: wrap;
- justify-content: center;
- text-align: center;
- 
+.educationContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+
 }
 
 .schoolListContainer {
@@ -147,13 +150,12 @@ label {
   padding-top: 5px;
 }
 
-.workContainer
-{
- display: flex;
- flex-wrap: wrap;
- justify-content: center;
- text-align: center;
- 
+.workContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+
 }
 
 textarea {
@@ -215,6 +217,7 @@ input[type=submit] {
 input[type=submit]:hover {
   border-color: #646cff;
 }
+
 input[type=submit]:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -231,13 +234,15 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
- 
+
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
